Revise terms and update last modified date
Updated the last updated date and modified several terms for clarity and consistency.

--- a/terms.html
+++ b/terms.html
@@ -22,11 +22,11 @@
 <body>
 
 <h1>Hear — Terms of Service</h1>
-<p><strong>Last updated:</strong> 13th November 2025<br>
+<p><strong>Last updated:</strong> 14th November 2025<br>
 <strong>App name:</strong> Hear<br>
 <strong>Contact:</strong> <a href="mailto:account@hearapp.me">account@hearapp.me</a></p>
 
-<p>These Terms of Service (“Terms”) are a contract between you (“you”, “user”) and Hear (“Hear”, “we”, “us”, “our”). By downloading, installing, accessing, or using Hear (the “App”) you agree to these Terms. If you do not agree, do not use the App.</p>
+<p>These Terms of Service ("Terms") are a contract between you ("you", "user") and Hear ("Hear", "we", "us", "our"). By downloading, installing, accessing, or using Hear (the "App") you agree to these Terms. If you do not agree, do not use the App.</p>
 
 <h2>1. Acceptance of Terms</h2>
 <p>By using the App you accept and agree to these Terms and to our Privacy Policy (which is incorporated here by reference). If you are agreeing on behalf of an organisation, you represent that you have the authority to bind that organisation.</p>
@@ -49,9 +49,16 @@
 <ul>
     <li><strong>Subscriptions.</strong> Hear may offer paid subscription(s) that unlock premium features. Subscriptions are billed on a recurring basis. Subscription management, billing, and entitlement verification are handled by RevenueCat and the relevant app store or payment provider.</li>
     <li><strong>Payment & billing.</strong> Payment processing and receipts are handled by your app store or payment provider.</li>
-    <li><strong>Cancellation.</strong> You can cancel subscriptions through the app store or RevenueCat’s interface.</li>
+    <li><strong>Cancellation.</strong> You can cancel subscriptions through the app store or RevenueCat's interface.</li>
     <li><strong>Refunds.</strong> Refunds are handled by the payment processor according to their policies.</li>
     <li><strong>Free trials & promotions.</strong> Free trials are subject to their own terms.</li>
+</ul>
+
+<h2>4.5 Fair Use & Usage Limits</h2>
+<ul>
+    <li><strong>Fair Use.</strong> Subscription features are provided for reasonable personal use. We reserve the right to implement usage limits or fair use policies to prevent abuse and ensure service quality for all users.</li>
+    <li><strong>Modifications.</strong> We may adjust feature limits, quotas, or availability with notice to users. Where limits are introduced or reduced, we will provide at least 30 days advance notice via email or in-app notification.</li>
+    <li><strong>Service Continuity.</strong> We strive to maintain consistent service, but features may change based on cost, sustainability, or technical requirements.</li>
 </ul>
 
 <h2>5. User Conduct</h2>
@@ -62,7 +69,7 @@
     <li>Abuse the glossary, translation, subtitle, transcript, or other processing features to generate or upload inappropriate content.</li>
     <li>Upload, post, or store content that infringes the intellectual property or privacy rights of others.</li>
     <li>Upload or transmit malware or harmful code.</li>
-    <li>Attempt to access other users’ accounts or data.</li>
+    <li>Attempt to access other users' accounts or data.</li>
     <li>Collect or scrape data from the App without permission.</li>
     <li>Use the App to send spam, unsolicited marketing, or abusive content.</li>
     <li>Reverse engineer or decompile the App.</li>
@@ -98,7 +105,7 @@
 <p>You may submit a counter-notice if you believe your content was wrongly removed. Repeat infringers may have accounts terminated.</p>
 
 <h2>7. Disclaimer of Warranties</h2>
-<p>The App is provided “as is” without warranties of any kind. We do not guarantee that the App will be uninterrupted or error-free.</p>
+<p>The App is provided "as is" without warranties of any kind. We do not guarantee that the App will be uninterrupted or error-free.</p>
 
 <h2>8. Limitation of Liability</h2>
 <p>To the maximum extent permitted by law, Hear is not liable for indirect or consequential damages. Our liability will not exceed the greater of the amount you paid in the last 12 months or £100.</p>
@@ -124,7 +131,7 @@
 </ul>
 
 <h2>13. Changes to Terms</h2>
-<p>We may update these Terms at any time. Continued use of the App constitutes acceptance of the updated Terms.</p>
+<p>We may update these Terms at any time. We will notify you of material changes via email or in-app notification where reasonably practicable. Continued use of the App after changes take effect constitutes acceptance of the updated Terms.</p>
 
 <h2>14. Miscellaneous</h2>
 <ul>
