--- a/email_verified.html
+++ b/email_verified.html
@@ -3,31 +3,31 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Email verified</title>
+  <title>Email verified - Hear</title>
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; display:flex; align-items:center; justify-content:center; height:100vh; margin:0; background:#f7fafc; color:#111827 }
-    .card{ background:white; padding:24px; border-radius:12px; box-shadow: 0 6px 18px rgba(0,0,0,0.08); max-width:520px; width:94%; text-align:center }
-    button, a.btn { background:#2563eb; color:#fff; border:none; padding:12px 20px; border-radius:8px; text-decoration:none; display:inline-block; margin-top:12px }
-    .muted{ color:#6b7280 }
-    pre{ background:#f3f4f6; padding:8px; border-radius:6px; overflow:auto }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; display:flex; align-items:center; justify-content:center; min-height:100vh; margin:0; background:#f6f7fb; color:#102a43; padding:20px }
+    .card{ background:white; padding:40px 32px; border-radius:12px; box-shadow: 0 6px 18px rgba(20,20,50,0.08); max-width:500px; width:100%; text-align:center }
+    .logo { width:120px; height:auto; margin:0 auto 24px; display:block }
+    h1 { margin:0 0 12px; font-size:24px; font-weight:600; color:#102a43 }
+    .muted{ color:#445566; font-size:15px; line-height:1.6; margin:0 0 24px }
+    button { background:#1E7078; color:#BEE7E8; border:none; padding:14px 28px; border-radius:8px; font-size:16px; font-weight:500; cursor:pointer; transition:all 0.2s }
+    button:hover { background:#165A61; transform:translateY(-1px) }
+    button:active { transform:translateY(0) }
+    pre{ background:#f3f4f6; padding:12px; border-radius:6px; overflow:auto; font-size:12px; color:#445566; margin:20px 0 0; word-break:break-all }
+    .help { margin-top:20px; font-size:13px; color:#7b8a95 }
   </style>
 </head>
 <body>
   <div class="card">
+    <img src="https://eterdas1.github.io/hear-privacy/logo.png" alt="Hear" class="logo">
     <h1>You're verified ✅</h1>
-    <p class="muted">We confirmed your email. Tap the button below to open the app.</p>
+    <p class="muted">Welcome to Hear! Your email has been confirmed. Tap the button below to open the app and start learning languages with podcasts.</p>
 
     <div id="actions">
       <button id="openApp">Open App</button>
-      <div style="margin-top:12px">
-        <a id="openWeb" class="btn" href="#">Continue in browser</a>
-      </div>
-
-      <p style="margin-top:12px" class="muted">If the app doesn't open, copy the link below into your phone's browser address bar.</p>
-      <pre id="link" style="margin-top:8px">...</pre>
+      <p class="help">If the app doesn't open automatically, copy the link below and paste it into your phone's browser:</p>
+      <pre id="link">...</pre>
     </div>
-
-    <p style="margin-top:16px" class="muted">If you opened this on desktop or your app isn't installed, use the "Continue in browser" button.</p>
   </div>
 
   <script>
@@ -46,13 +46,7 @@
       return deep;
     }
 
-    function buildBrowserContinueUrl() {
-      // Keep the current URL (it already contains tokens) to continue in browser
-      return window.location.href;
-    }
-
     const appLink = buildAppDeepLink();
-    const continueUrl = buildBrowserContinueUrl();
 
     document.getElementById('link').textContent = appLink;
     document.getElementById('openApp').addEventListener('click', () => {
@@ -64,9 +58,7 @@
       }, 600);
     });
 
-    document.getElementById('openWeb').setAttribute('href', continueUrl);
-
-    // Optionally auto-redirect for mobile users
+    // Auto-redirect for mobile users
     (function autoOpen() {
       const isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
       if (isMobile) {
