Create delete.html for account deletion instructions

--- a/delete.html
+++ b/delete.html
@@ -1,1 +1,32 @@
-hey
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hear - Terms of Service</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            color: #333;
+        }
+        h1 { color: #2c3e50; }
+        h2 { color: #34495e; margin-top: 30px; }
+        h3 { color: #7f8c8d; }
+        a { color: #3498db; }
+    </style>
+</head>
+<body>
+
+<h1>Hear — Account Deletion</h1>
+<p><strong>Last updated:</strong> 14th November 2025<br>
+<strong>App name:</strong> Hear<br>
+<strong>Contact:</strong> <a href="mailto:account@hearapp.me">account@hearapp.me</a></p>
+
+<p>Log into your account on the Hear App, navigate to the account page and scroll to the bottom. Select the 'Delete Account' option and your account will be removed and all of its information.</p>
+
+</body>
+</html>
